# AGAGENT

strawberry/: 1_fertilizer_model2.json.pkl  2_fertilizer_model2.json.pkl  3_fertilizer_model2.json.pkl  4_fertilizer_model2.json.pkl  5_fertilizer_model2.json.pkl  6_fertilizer_model2.json.pkl  7_fertilizer_model2.json.pkl  8_fertilizer_model2.json.pkl  README.md  pyproject.toml  scenarios.csv  training_data.pkl
strawberry/src/strawberry/: crew.py  main.py
strawberry/src/strawberry/config/: agents.yaml  tasks.yaml
