[project]
name = "strawberry"
version = "0.1.0"
description = "strawberry using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
strawberry = "strawberry.main:run"
run_crew = "strawberry.main:run"
train = "strawberry.main:train"
replay = "strawberry.main:replay"
test = "strawberry.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
